--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,25 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <%= link_to "AppName", root_path %>
+      <nav>
+        <ul>
+          <li>
+            <%= link_to t("devise.shared.links.sign_in"), new_user_session_path %>
+          </li>
+        </ul>
+      </nav>
+      <% if user_signed_in? %>
+        <%= current_user.email %>
+        <%= link_to "アカウント編集", edit_user_registration_path %>
+        <%= button_to "ログアウト", destroy_user_session_path, method: :delete %>
+      <% end %>
+    </header>
+    <main>
+      <%= notice %>
+      <%= alert %>
+      <%= yield %>
+    </main>
   </body>
 </html>
