fix: パーシャルでインスタンス変数が定義されていないことで起こるエラーを解消

--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,3 +1,6 @@
+<% wrapper_class ||= nil %>
+<% link_class ||= nil %>
+
 <div class="space-y-1 <%= wrapper_class %>">
   <% if controller_name != 'sessions' %>
     <div>
