--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -37,6 +37,17 @@
     <div class="hidden w-full items-center justify-between md:order-1 md:flex md:w-auto" id="mobile-menu-2">
       <ul class="md: mt-4 flex flex-col rounded-lg border border-gray-100 bg-gray-50 p-4 font-medium md:mt-0 md:flex-row md:space-x-8 md:border-0 md:bg-white md:p-0">
         <li>
+          <%= link_to t("devise.shared.links.sign_in"), new_user_session_path, class: "md: md: block rounded py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700" %>
+        </li>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to "アカウント編集", edit_user_registration_path, class: "md: md: block rounded py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700" %>
+          </li>
+          <li>
+            <%= button_to "ログアウト", destroy_user_session_path, method: :delete %>
+          </li>
+        <% end %>
+        <li>
           <a href="#" class="md: block rounded bg-blue-700 py-2 pl-3 pr-4 text-white md:bg-transparent md:p-0 md:text-blue-700" aria-current="page">Home</a>
         </li>
         <li>
