--- a/app/views/layouts/tailwindui.html.erb
+++ b/app/views/layouts/tailwindui.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="<%= "h-full" if action_name == "_404" %>">
+<html class="<%= "h-full" if action_name.in? %w[_404 sign_in_form] %>">
   <head>
     <title>ViewComponentSandbox</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,8 +11,8 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body class="<%= "h-full" if action_name == "_404" %>">
-    <% if action_name == "_404" %>
+  <body class="<%= "h-full" if action_name.in? %w[_404 sign_in_form] %>">
+    <% if action_name.in? %w[_404 sign_in_form] %>
       <%= yield %>
     <% else %>
       <div class="p-10">
