feat: ナブバーにメニュー

--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -36,6 +36,51 @@
           >
         </a>
       </div>
+      <div
+        class="hidden w-full items-center justify-between md:flex md:w-auto"
+        id="mobile-menu-2"
+      >
+        <ul
+          class="mt-4 flex flex-col rounded-lg border border-gray-100 bg-gray-50 p-4 font-medium md:mt-0 md:flex-row md:space-x-8 md:border-0 md:bg-white md:p-0"
+        >
+          <li>
+            <a
+              href="#"
+              class="block rounded bg-blue-700 py-2 pl-3 pr-4 text-white md:bg-transparent md:p-0 md:text-blue-700"
+              aria-current="page"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a
+              href="#"
+              class="block rounded py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700"
+              >About</a
+            >
+          </li>
+          <li>
+            <a
+              href="#"
+              class="block rounded py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700"
+              >Services</a
+            >
+          </li>
+          <li>
+            <a
+              href="#"
+              class="block rounded py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700"
+              >Pricing</a
+            >
+          </li>
+          <li>
+            <a
+              href="#"
+              class="block rounded py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:p-0 md:hover:bg-transparent md:hover:text-blue-700"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </div>
       <div class="flex items-center">
         <div class="ml-3 flex items-center">
           <div>
