--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,16 @@
     <!-- ml-64 はサイドバーの w-64 と揃える -->
     <!-- mt-14 はナブバーの高さ -->
     <div class="mt-14 p-4 sm:ml-64">
+      <% if notice %>
+        <div class="mb-4 rounded-lg bg-blue-50 p-4 text-sm text-blue-800" role="alert">
+          <%= notice %>
+        </div>
+      <% end %>
+      <% if alert %>
+        <div class="mb-4 rounded-lg bg-red-50 p-4 text-sm text-red-800" role="alert">
+          <%= alert %>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
