--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,11 @@
 <div class="rounded-lg border-2 border-dashed border-gray-200 p-4">
   <div class="mb-4 grid grid-cols-3 gap-4">
     <div class="flex h-24 items-center justify-center rounded bg-gray-50">
-      <p class="text-2xl text-gray-400">+</p>
+      <p class="text-2xl text-gray-400">
+        <%= render(ExampleComponent.new(title: "my title")) do %>
+          Hello, World!
+        <% end %>
+      </p>
     </div>
     <div class="flex h-24 items-center justify-center rounded bg-gray-50">
       <p class="text-2xl text-gray-400">+</p>
