--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
       </p>
     </div>
     <div class="flex h-24 items-center justify-center rounded bg-gray-50">
-      <p class="text-2xl text-gray-400">+</p>
+      <div class="text-2xl text-gray-400" data-controller="react"></div>
     </div>
     <div class="flex h-24 items-center justify-center rounded bg-gray-50">
       <p class="text-2xl text-gray-400">+</p>
