--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,10 +8,10 @@
       </p>
     </div>
     <div class="flex h-24 items-center justify-center rounded bg-gray-50">
-      <div class="text-2xl text-gray-400" data-controller="react" data-react-name-value="Hello"></div>
+      <div class="text-2xl text-gray-400" data-controller="component" data-component-name-value="Hello"></div>
     </div>
     <div class="flex h-24 items-center justify-center rounded bg-gray-50">
-      <div class="text-2xl text-gray-400" data-controller="react" data-react-name-value="Hi"></div>
+      <div class="text-2xl text-gray-400" data-controller="component" data-component-name-value="Hi"></div>
     </div>
   </div>
   <div class="mb-4 flex h-48 items-center justify-center rounded bg-gray-50">
