refactor: slots でアイコンとバッジ

--- a/app/components/sidebar_component.html.erb
+++ b/app/components/sidebar_component.html.erb
@@ -6,35 +6,27 @@
 >
   <div class="h-full overflow-y-auto bg-white px-3 py-4">
     <ul class="space-y-2 font-medium">
-      <%= render SidebarItemComponent.new(name: "Dashboard", url: root_path, icon_id: "dashboard") %>
-      <%= render SidebarItemComponent.new(name: "Kanban", url: root_path, icon_id: "kanban", badge_text: "Pro", badge_color: "dark") %>
-      <%= render SidebarItemComponent.new(name: "Inbox", url: root_path, icon_id: "inbox", badge_text: "3", badge_color: "dark") %>
-      <li>
-        <a
-          href="#"
-          class="flex items-center rounded-lg p-2 text-gray-900 hover:bg-gray-100"
-        >
-          <svg
-            aria-hidden="true"
-            class="h-6 w-6 flex-shrink-0 text-gray-500 transition duration-75 group-hover:text-gray-900"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
+      <%= render SidebarItemComponent.new(name: "Dashboard", url: root_path) do |component| %>
+        <% component.with_icon { helpers.dashboard_icon } %>
+      <% end %>
+      <%= render SidebarItemComponent.new(name: "Kanban", url: root_path) do |component| %>
+        <% component.with_icon { helpers.kanban_icon } %>
+        <% component.with_badge do %>
+          <span
+            class="ml-3 inline-flex items-center justify-center rounded-full bg-gray-200 px-2 text-sm font-medium text-gray-800"
+            >Pro</span
           >
-            <path
-              d="M8.707 7.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l2-2a1 1 0 00-1.414-1.414L11 7.586V3a1 1 0 10-2 0v4.586l-.293-.293z"
-            ></path>
-            <path
-              d="M3 5a2 2 0 012-2h1a1 1 0 010 2H5v7h2l1 2h4l1-2h2V5h-1a1 1 0 110-2h1a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V5z"
-            ></path>
-          </svg>
-          <span class="ml-3 flex-1 whitespace-nowrap">Inbox</span>
+        <% end %>
+      <% end %>
+      <%= render SidebarItemComponent.new(name: "Inbox", url: root_path) do |component| %>
+        <% component.with_icon { helpers.inbox_icon } %>
+        <% component.with_badge do %>
           <span
             class="ml-3 inline-flex h-3 w-3 items-center justify-center rounded-full bg-blue-100 p-3 text-sm font-medium text-blue-800"
             >3</span
           >
-        </a>
-      </li>
+        <% end %>
+      <% end %>
       <li>
         <a
           href="#"
