--- a/app/components/sidebar_item_component.html.erb
+++ b/app/components/sidebar_item_component.html.erb
@@ -5,11 +5,6 @@
   >
     <%= icon %>
     <span class="ml-3 flex-1 whitespace-nowrap"><%= @name %></span>
-    <% if @badge_text %>
-      <span
-        class="ml-3 inline-flex items-center justify-center rounded-full bg-gray-200 px-2 text-sm font-medium text-gray-800"
-        ><%= @badge_text %></span
-      >
-    <% end %>
+    <%= badge %>
   </a>
 </li>
