feat: Tailwind UI の例へのリンク、ナブバーの真ん中の要素の位置を調整

--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -1,7 +1,7 @@
 <nav class="fixed top-0 z-50 w-full border-b border-gray-200 bg-white">
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
-      <div class="flex items-center justify-start">
+      <div class="flex flex-1 items-center justify-start">
         <button
           data-drawer-target="logo-sidebar"
           data-drawer-toggle="logo-sidebar"
@@ -93,7 +93,7 @@
           <% end %>
         </ul>
       </div>
-      <div class="flex items-center">
+      <div class="flex flex-1 items-center justify-end">
         <div class="ml-3 flex items-center">
           <div>
             <button
