--- a/app/components/sidebar_item_component.html.erb
+++ b/app/components/sidebar_item_component.html.erb
@@ -1,10 +1,10 @@
 <li>
   <a
     href=<%= @url %>
-    class="flex items-center rounded-lg p-2 text-gray-900 hover:bg-gray-100"
+    class="group flex items-center rounded-lg p-2 <%= "pl-11" unless icon? %> text-gray-900 hover:bg-gray-100"
   >
     <%= icon %>
-    <span class="ml-3 flex-1 whitespace-nowrap"><%= @name %></span>
+    <span class="<%= "ml-3" if icon? %> flex-1 whitespace-nowrap"><%= @name %></span>
     <%= badge %>
   </a>
 </li>
