--- a/app/views/layouts/tailwindui.html.erb
+++ b/app/views/layouts/tailwindui.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body class="<%= "h-full" if action_name.in? %w[_404 sign_in_form] %>">
-    <% if action_name.in? %w[_404 category_filter sign_in_form] %>
+    <% if action_name.in? %w[_404 category_filter sign_in_form store_navigation] %>
       <%= yield %>
     <% else %>
       <div class="p-10">
