--- a/app/views/layouts/primer.html.erb
+++ b/app/views/layouts/primer.html.erb
@@ -11,6 +11,7 @@
     <% # FIXME: 消すと Button のスタイルがなくなる %>
     <%= stylesheet_link_tag "primer_view_components", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "primer_view_components", "application", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
