--- a/app/views/primer/repositories/_repository.html.erb
+++ b/app/views/primer/repositories/_repository.html.erb
@@ -1,22 +1,27 @@
 <div id="<%= dom_id repository %>">
-  <p>
-    <strong>User:</strong>
-    <%= repository.user_id %>
-  </p>
-
-  <p>
-    <strong>Name:</strong>
-    <%= repository.name %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
-    <%= repository.description %>
-  </p>
-
-  <p>
-    <strong>Status:</strong>
-    <%= repository.status %>
-  </p>
-
+  <%= render(Primer::Beta::Subhead.new) do |component| %>
+    <% component.with_heading do %>
+      <%= render(Primer::Beta::Heading.new(tag: :h3)) do %>
+        <%= render(Primer::Beta::Link.new(href: primer_repository_path(repository))) { repository.name } %>
+        <%= render(Primer::Beta::Label.new) { repository.status } %>
+      <% end %>
+    <% end %>
+    <% component.with_description do %>
+      <%= repository.description %>
+    <% end %>
+    <% component.with_actions do %>
+      <%= render(Primer::Box.new(display: :flex)) do %>
+        <%= render(Primer::Beta::Button.new(tag: :a, href: edit_primer_repository_path(repository), ml: 2)) do |component| %>
+          <% component.with_leading_visual_icon(icon: :pencil) %>
+          Edit
+        <% end %>
+        <%= form_with(url: primer_repository_path(repository), method: :delete) do %>
+          <%= render(Primer::Beta::Button.new(scheme: :danger, type: :submit, data: { turbo_confirm: "Are you sure?" }, ml: 2)) do |component| %>
+            <% component.with_leading_visual_icon(icon: :trash) %>
+            Destroy
+          <% end %>
+        <% end %>
+      <% end %>
+    <% end %>
+  <% end %>
 </div>
