feat: tailwind ui のコンポーネント例

--- a/app/components/sidebar_component.html.erb
+++ b/app/components/sidebar_component.html.erb
@@ -40,18 +40,48 @@
         <% component.with_icon { helpers.sign_up_icon } %>
       <% end %>
       <%= render SidebarItemComponent.new(name: "404", url: _404_path) %>
+      <%= render SidebarItemComponent.new(name: "Avatars", url: avatars_path) %>
+      <%= render SidebarItemComponent.new(name: "Badges", url: badges_path) %>
+      <%= render SidebarItemComponent.new(name: "Banner", url: banner_path) %>
+      <%= render SidebarItemComponent.new(name: "Blog Section", url: blog_section_path) %>
       <%= render SidebarItemComponent.new(name: "Category Filter", url: category_filter_path) %>
       <%= render SidebarItemComponent.new(name: "Category Preview", url: category_preview_path) %>
+      <%= render SidebarItemComponent.new(name: "Contact Section", url: contact_section_path) %>
+      <%= render SidebarItemComponent.new(name: "Content Section", url: content_section_path) %>
+      <%= render SidebarItemComponent.new(name: "CTA Section", url: cta_section_path) %>
       <%= render SidebarItemComponent.new(name: "Description List", url: description_list_path) %>
+      <%= render SidebarItemComponent.new(name: "Dropdown", url: dropdown_path) %>
+      <%= render SidebarItemComponent.new(name: "Dropdown with dividers", url: dropdown_with_dividers_path) %>
+      <%= render SidebarItemComponent.new(name: "Feature Section", url: feature_section_path) %>
+      <%= render SidebarItemComponent.new(name: "Feature Section with product screenshot", url: feature_section_ith_product_screenshot_path) %>
+      <%= render SidebarItemComponent.new(name: "Flyout Menu", url: flyout_menu_path) %>
       <%= render SidebarItemComponent.new(name: "Form Layout", url: form_layout_path) %>
+      <%= render SidebarItemComponent.new(name: "Header", url: header_path) %>
+      <%= render SidebarItemComponent.new(name: "Header Section", url: header_section_path) %>
+      <%= render SidebarItemComponent.new(name: "Hero Section", url: hero_section_path) %>
+      <%= render SidebarItemComponent.new(name: "Input Group", url: input_group_path) %>
+      <%= render SidebarItemComponent.new(name: "Logo Clouds", url: logo_clouds_path) %>
+      <%= render SidebarItemComponent.new(name: "Modal", url: modal_path) %>
+      <%= render SidebarItemComponent.new(name: "Navbar", url: navbar_path) %>
+      <%= render SidebarItemComponent.new(name: "Newsletter Section", url: newsletter_section_path) %>
+      <%= render SidebarItemComponent.new(name: "Pagination", url: pagination_path) %>
+      <%= render SidebarItemComponent.new(name: "Page Heading", url: page_heading_path) %>
+      <%= render SidebarItemComponent.new(name: "Pricing Section", url: pricing_section_path) %>
       <%= render SidebarItemComponent.new(name: "Product Feature", url: product_feature_path) %>
       <%= render SidebarItemComponent.new(name: "Product List", url: product_list_path) %>
+      <%= render SidebarItemComponent.new(name: "Product List With inline price", url: product_list_with_inline_price_path) %>
       <%= render SidebarItemComponent.new(name: "Product Overview", url: product_overview_path) %>
       <%= render SidebarItemComponent.new(name: "Product Quickview", url: product_quickview_path) %>
       <%= render SidebarItemComponent.new(name: "Promo Section", url: promo_section_path) %>
+      <%= render SidebarItemComponent.new(name: "Select Menu", url: select_menu_path) %>
       <%= render SidebarItemComponent.new(name: "Shopping Cart", url: shopping_cart_path) %>
+      <%= render SidebarItemComponent.new(name: "Slide-over", url: slide_over_path) %>
       <%= render SidebarItemComponent.new(name: "Sign In Form", url: sign_in_form_path) %>
+      <%= render SidebarItemComponent.new(name: "Stacked List", url: stacked_list_path) %>
+      <%= render SidebarItemComponent.new(name: "Stats", url: stats_path) %>
       <%= render SidebarItemComponent.new(name: "Store Navigation", url: store_navigation_path) %>
+      <%= render SidebarItemComponent.new(name: "Team Section", url: team_section_path) %>
+      <%= render SidebarItemComponent.new(name: "Testimonial", url: testimonial_path) %>
     </ul>
   </div>
 </aside>
