test: tippy.js のドロップダウンのテスト

--- a/app/views/layouts/flowbite.html.erb
+++ b/app/views/layouts/flowbite.html.erb
@@ -34,6 +34,7 @@
           data-tippy-dropdown-placement-value="right-start"
           data-tippy-dropdown-show-class="block"
           data-tippy-dropdown-hide-class="hidden"
+          data-testid="tippy-dropdown"
         >
           <button
             type="button"
