feat: tailwindcss-stimulus-components の alert, dropdown, modal

--- a/app/views/layouts/flowbite.html.erb
+++ b/app/views/layouts/flowbite.html.erb
@@ -31,6 +31,15 @@
       <div class="p-5" data-testid="tippy-dropdown">
         <%= render TippyDropdownComponent.new %>
       </div>
+      <div class="p-5">
+        <%= render AlertComponent.new %>
+      </div>
+      <div class="p-5">
+        <%= render DropdownComponent.new %>
+      </div>
+      <div class="p-5">
+        <%= render ModalComponent.new %>
+      </div>
       <%= yield %>
     </div>
   </body>
