feat: tailwindcss-stimulus-components の toggle

--- a/app/views/layouts/flowbite.html.erb
+++ b/app/views/layouts/flowbite.html.erb
@@ -40,6 +40,9 @@
       <div class="p-5">
         <%= render ModalComponent.new %>
       </div>
+      <div class="p-5">
+        <%= render ToggleComponent.new %>
+      </div>
       <%= yield %>
     </div>
   </body>
