refactor: ナブバーとサイドバーの z-index を調整

--- a/app/views/layouts/flowbite.html.erb
+++ b/app/views/layouts/flowbite.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <!-- https://flowbite.com/docs/components/sidebar/#sidebar-with-navbar -->
+    <!-- ナブバーは z-20、サイドバーは z-10 -->
     <%= render NavbarComponent.new %>
     <%= render SidebarComponent.new %>
 
