--- a/app/components/modal_component.html.erb
+++ b/app/components/modal_component.html.erb
@@ -1,8 +1,8 @@
-<div data-controller="modal" data-action="keydown.esc->modal#close" tabindex="-1" class="relative z-10">
+<div data-controller="modal" data-action="keydown.esc->modal#close" tabindex="-1" class="relative">
   <button data-action="click->modal#open" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded">Open Modal</button>
 
   <!-- Modal Background -->
-  <div class="hidden fixed inset-0 bg-black bg-opacity-80 overflow-y-auto flex items-center justify-center"
+  <div class="hidden fixed inset-0 bg-black bg-opacity-80 overflow-y-auto flex items-center justify-center z-20"
         data-modal-target="background"
         data-action="click->modal#closeBackground"
         data-transition-enter="transition-all ease-in-out duration-300"
