fix: daterange 型のカラムを開始日と終了日に分けて入力できるように

--- a/app/views/my_pg_models/_form.html.erb
+++ b/app/views/my_pg_models/_form.html.erb
@@ -47,8 +47,13 @@
   </div>
 
   <div>
-    <%= form.label :my_daterange, style: "display: block" %>
-    <%= form.text_field :my_daterange %>
+    <%= form.label :my_daterange_start_on, style: "display: block" %>
+    <%= form.date_field :my_daterange_start_on %>
+  </div>
+
+  <div>
+    <%= form.label :my_daterange_end_on, style: "display: block" %>
+    <%= form.date_field :my_daterange_end_on %>
   </div>
 
   <div>
