--- a/app/views/my_models/index.html.erb
+++ b/app/views/my_models/index.html.erb
@@ -1,14 +1,54 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>My models</h1>
+<%= link_to "New my model", new_my_model_path %>
 
 <div id="my_models">
-  <% @my_models.each do |my_model| %>
-    <%= render "my_model", my_model: my_model %>
-    <p>
-      <%= link_to "Show this my model", my_model_path(my_model) %>
-    </p>
-  <% end %>
+  <div class="relative overflow-x-auto">
+    <table class="w-full border-collapse border border-slate-400 bg-white text-sm shadow-sm">
+      <thead class="bg-slate-50">
+        <tr>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">id</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_string</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_text</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_integer</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_bigint</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_float</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_decimal</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_datetime</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_time</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_date</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">my_boolean</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">created_at</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900">updated_at</th>
+          <th class="border border-slate-300 p-4 text-left font-semibold text-slate-900"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @my_models.each do |my_model| %>
+          <tr>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.id %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_string %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_text %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_integer %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_bigint %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_float %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_decimal %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_datetime %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_time %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_date %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_boolean %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.created_at %></td>
+            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.updated_at %></td>
+            <td class="border border-slate-300 p-4 text-slate-500">
+              <div class="flex items-center justify-center gap-x-4">
+                <%= link_to "Show", my_model_path(my_model), class: "font-medium text-indigo-600 hover:text-indigo-500" %>
+                <%= button_to "Destroy", my_model_path(my_model), method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "font-medium text-indigo-600 hover:text-indigo-500" %>
+              </div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
-
-<%= link_to "New my model", new_my_model_path %>
