feat: 数値型のカラムは右寄せで等幅で表示する

--- a/app/views/my_models/index.html.erb
+++ b/app/views/my_models/index.html.erb
@@ -30,10 +30,10 @@
             <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.id %></td>
             <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_string %></td>
             <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_text %></td>
-            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_integer %></td>
-            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_bigint %></td>
-            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_float %></td>
-            <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_decimal %></td>
+            <td class="border border-slate-300 p-4 text-right tabular-nums text-slate-500"><%= my_model.my_integer %></td>
+            <td class="border border-slate-300 p-4 text-right tabular-nums text-slate-500"><%= my_model.my_bigint %></td>
+            <td class="border border-slate-300 p-4 text-right tabular-nums text-slate-500"><%= my_model.my_float %></td>
+            <td class="border border-slate-300 p-4 text-right tabular-nums text-slate-500"><%= my_model.my_decimal %></td>
             <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_datetime %></td>
             <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_time %></td>
             <td class="border border-slate-300 p-4 text-slate-500"><%= my_model.my_date %></td>
