--- a/app/views/my_models/index.html.erb
+++ b/app/views/my_models/index.html.erb
@@ -1,7 +1,11 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>My models</h1>
-<%= link_to "New my model", new_my_model_path %>
+<div class="lg:flex lg:items-center lg:justify-between mb-4">
+  <div class="min-w-0 flex-1">
+    <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight"><%= MyModel.model_name.human %></h1>
+  </div>
+  <%= link_to "New my model", new_my_model_path, class: "inline-flex items-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
+</div>
 
 <div id="my_models">
   <div class="relative overflow-x-auto">
