--- a/app/views/my_models/_form.html.erb
+++ b/app/views/my_models/_form.html.erb
@@ -1,67 +1,111 @@
 <%= form_with(model: my_model) do |form| %>
-  <% if my_model.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(my_model.errors.count, "error") %> prohibited this my_model from being saved:</h2>
+  <div class="space-y-12">
+    <div class="border-b border-gray-900/10 pb-12">
+      <h1 class="text-base font-semibold leading-7 text-gray-900"><%= title %></h1>
+      <p class="mt-1 text-sm leading-6 text-gray-600">This information will be displayed publicly so be careful what you share.</p>
 
-      <ul>
-        <% my_model.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+      <% if my_model.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(my_model.errors.count, "error") %> prohibited this my_model from being saved:</h2>
+
+          <ul>
+            <% my_model.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+        <div class="col-span-full">
+          <%= form.label :my_string, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.text_field :my_string, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+          </div>
+          <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
+        </div>
+
+        <div class="col-span-full">
+          <%= form.label :my_text, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.text_area :my_text, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+          </div>
+          <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
+        </div>
+
+        <div class="col-span-full">
+          <%= form.label :my_integer, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.number_field :my_integer, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+          </div>
+          <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
+        </div>
+
+        <div class="col-span-full">
+          <%= form.label :my_bigint, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.number_field :my_bigint, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+          </div>
+          <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
+        </div>
+
+        <div class="col-span-full">
+          <%= form.label :my_float, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.number_field :my_float, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+          </div>
+          <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
+        </div>
+
+        <div class="col-span-full">
+          <%= form.label :my_decimal, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.number_field :my_decimal, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+          </div>
+          <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
+        </div>
+
+        <div class="sm:col-span-2">
+          <%= form.label :my_datetime, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.datetime_field :my_datetime, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+          </div>
+          <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
+        </div>
+
+        <div class="sm:col-span-2">
+          <%= form.label :my_time, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.time_field :my_time, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+          </div>
+          <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
+        </div>
+
+        <div class="sm:col-span-2">
+          <%= form.label :my_date, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.date_field :my_date, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+          </div>
+          <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
+        </div>
+
+        <div class="col-span-full">
+          <div class="relative flex gap-x-3">
+            <div class="flex h-6 items-center">
+              <%= form.check_box :my_boolean, class: "h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" %>
+            </div>
+            <div class="text-sm leading-6">
+              <%= form.label :my_boolean, class: "font-medium text-gray-900" %>
+              <p class="text-gray-500">Get notified when someones posts a comment on a posting.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.label :my_string, style: "display: block" %>
-    <%= form.text_field :my_string %>
   </div>
 
-  <div>
-    <%= form.label :my_text, style: "display: block" %>
-    <%= form.text_area :my_text %>
-  </div>
-
-  <div>
-    <%= form.label :my_integer, style: "display: block" %>
-    <%= form.number_field :my_integer %>
-  </div>
-
-  <div>
-    <%= form.label :my_bigint, style: "display: block" %>
-    <%= form.text_field :my_bigint %>
-  </div>
-
-  <div>
-    <%= form.label :my_float, style: "display: block" %>
-    <%= form.text_field :my_float %>
-  </div>
-
-  <div>
-    <%= form.label :my_decimal, style: "display: block" %>
-    <%= form.text_field :my_decimal %>
-  </div>
-
-  <div>
-    <%= form.label :my_datetime, style: "display: block" %>
-    <%= form.datetime_field :my_datetime %>
-  </div>
-
-  <div>
-    <%= form.label :my_time, style: "display: block" %>
-    <%= form.time_field :my_time %>
-  </div>
-
-  <div>
-    <%= form.label :my_date, style: "display: block" %>
-    <%= form.date_field :my_date %>
-  </div>
-
-  <div>
-    <%= form.label :my_boolean, style: "display: block" %>
-    <%= form.check_box :my_boolean %>
-  </div>
-
-  <div>
-    <%= form.button %>
+  <div class="mt-6 flex items-center justify-end gap-x-6">
+    <%= link_to "Cancel", cancel_path, class: "text-sm font-semibold leading-6 text-gray-900" %>
+    <%= form.button class: "rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
   </div>
 <% end %>
