--- a/app/views/my_models/edit.html.erb
+++ b/app/views/my_models/edit.html.erb
@@ -1,10 +1,3 @@
-<h1>Editing my model</h1>
-
-<%= render "form", my_model: @my_model %>
-
-<br>
-
-<div>
-  <%= link_to "Show this my model", my_model_path(@my_model) %> |
-  <%= link_to "Back to my models", my_models_path %>
+<div class="sm:mx-auto sm:max-w-2xl">
+  <%= render "form", my_model: @my_model, title: "Editing my model", cancel_path: my_model_path(@my_model) %>
 </div>
