feat: セレクトとラジオボタン要素を追加

--- a/app/views/my_models/_form.html.erb
+++ b/app/views/my_models/_form.html.erb
@@ -33,7 +33,7 @@
           <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
         </div>
 
-        <div class="col-span-full">
+        <div class="sm:col-span-4">
           <%= form.label :my_integer, class: "block text-sm font-medium leading-6 text-gray-900" %>
           <div class="mt-2">
             <%= form.number_field :my_integer, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
@@ -49,7 +49,7 @@
           <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
         </div>
 
-        <div class="col-span-full">
+        <div class="sm:col-span-3">
           <%= form.label :my_float, class: "block text-sm font-medium leading-6 text-gray-900" %>
           <div class="mt-2">
             <%= form.number_field :my_float, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
@@ -57,7 +57,7 @@
           <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
         </div>
 
-        <div class="col-span-full">
+        <div class="sm:col-span-3">
           <%= form.label :my_decimal, class: "block text-sm font-medium leading-6 text-gray-900" %>
           <div class="mt-2">
             <%= form.number_field :my_decimal, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
@@ -99,6 +99,28 @@
               <p class="text-gray-500">Get notified when someones posts a comment on a posting.</p>
             </div>
           </div>
+        </div>
+
+        <div class="sm:col-span-3">
+          <%= form.label :my_select_attribute, class: "block text-sm font-medium leading-6 text-gray-900" %>
+          <div class="mt-2">
+            <%= form.collection_select :my_select_attribute, MyModel.my_select_attributes, :first, :first, { include_blank: true }, { class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6" } %>
+          </div>
+        </div>
+
+        <div class="col-span-full">
+          <fieldset>
+            <legend class="text-sm font-semibold leading-6 text-gray-900"><%= MyModel.human_attribute_name(:my_radio_button_attribute) %></legend>
+            <p class="mt-1 text-sm leading-6 text-gray-600">These are delivered via SMS to your mobile phone.</p>
+            <div class="mt-6 space-y-6">
+              <%= form.collection_radio_buttons(:my_radio_button_attribute, MyModel.my_radio_button_attributes, :first, :first) do |block| %>
+                <div class="flex items-center gap-x-3">
+                  <%= block.radio_button class: "h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600" %>
+                  <%= block.label class: "block text-sm font-medium leading-6 text-gray-900" %>
+                </div>
+              <% end %>
+            </div>
+          </fieldset>
         </div>
       </div>
     </div>
