feat: チェックボックスの凡例を表示、ラジオボタンの選択肢を横並びに

--- a/app/views/my_models/_form.html.erb
+++ b/app/views/my_models/_form.html.erb
@@ -90,15 +90,20 @@
         </div>
 
         <div class="col-span-full">
-          <div class="relative flex gap-x-3">
-            <div class="flex h-6 items-center">
-              <%= form.check_box :my_boolean, class: "h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" %>
+          <fieldset>
+            <legend class="text-sm font-semibold leading-6 text-gray-900"><%= MyModel.human_attribute_name(:my_boolean) %></legend>
+            <div class="mt-2">
+              <div class="relative flex gap-x-3">
+                <div class="flex h-6 items-center">
+                  <%= form.check_box :my_boolean, class: "h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" %>
+                </div>
+                <div class="text-sm leading-6">
+                  <%= form.label :my_boolean, class: "font-medium text-gray-900" %>
+                  <p class="text-gray-500">Get notified when someones posts a comment on a posting.</p>
+                </div>
+              </div>
             </div>
-            <div class="text-sm leading-6">
-              <%= form.label :my_boolean, class: "font-medium text-gray-900" %>
-              <p class="text-gray-500">Get notified when someones posts a comment on a posting.</p>
-            </div>
-          </div>
+          </fieldset>
         </div>
 
         <div class="sm:col-span-3">
@@ -118,15 +123,15 @@
         <div class="col-span-full">
           <fieldset>
             <legend class="text-sm font-semibold leading-6 text-gray-900"><%= MyModel.human_attribute_name(:my_radio_button_attribute) %></legend>
-            <p class="mt-1 text-sm leading-6 text-gray-600">These are delivered via SMS to your mobile phone.</p>
-            <div class="mt-6 space-y-6">
-              <%= form.collection_radio_buttons(:my_radio_button_attribute, MyModel.my_radio_button_attributes, :first, :first) do |block| %>
+            <div class="mt-2 flex items-center gap-x-6">
+              <%= form.collection_radio_buttons :my_radio_button_attribute, MyModel.my_radio_button_attributes, :first, :first do |block| %>
                 <div class="flex items-center gap-x-3">
                   <%= block.radio_button class: "h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600" %>
                   <%= block.label class: "block text-sm font-medium leading-6 text-gray-900" %>
                 </div>
               <% end %>
             </div>
+            <p class="mt-3 text-sm leading-6 text-gray-600">These are delivered via SMS to your mobile phone.</p>
           </fieldset>
         </div>
       </div>
