feat: 並べ替えることができるモデル

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -3,3 +3,9 @@
 @import "tailwindcss/utilities";
 
 @import "choices.js/public/assets/styles/choices.min.css";
+
+@layer components {
+  .sortable-chosen {
+    @apply bg-slate-200;
+  }
+}
