--- a/app/views/my_models/_form.html.erb
+++ b/app/views/my_models/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: my_model) do |form| %>
+<%= form_with(model: my_model, builder: ::FormBuilders::MyFormBuilder) do |form| %>
   <div class="space-y-12">
     <div class="border-b border-gray-900/10 pb-12">
       <h1 class="text-base font-semibold leading-7 text-gray-900"><%= title %></h1>
